<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (C) 2010 Jamie McDonald

	This file is part of MusicBrainz Mobile (Android).

	MusicBrainz Mobile (Android) is free software: you can redistribute 
	it and/or modify it under the terms of the GNU General Public 
	License as published by the Free Software Foundation, either 
	version 3 of the License, or (at your option) any later version.

	MusicBrainz Mobile (Android) is distributed in the hope that it 
	will be useful, but WITHOUT ANY WARRANTY; without even the implied 
	warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
	See the GNU General Public License for more details.

	You should have received a copy of the GNU General Public License
	along with MusicBrainz Mobile (Android). If not, see 
	<http://www.gnu.org/licenses/>. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/Activity">
	
	<com.markupartist.android.widget.ActionBar
    	android:id="@+id/actionbar"
    	style="@style/ActionBar" />
    
    <LinearLayout
    	style="@style/HomeTileRow">
		
		<Button android:id="@+id/scan_btn"
			style="@style/HomeTile"
			android:text="@string/scan_label"
			android:drawableTop="@drawable/home_barcode" />
		
		<Button android:id="@+id/login_btn"
			style="@style/HomeTile"
			android:text="@string/login_label"
			android:drawableTop="@drawable/home_login" />
	</LinearLayout>
		
	<RelativeLayout
		style="@style/WrapHeight"
		android:paddingRight="@dimen/home_pad"
		android:paddingLeft="@dimen/home_pad" >
		
		<Spinner android:id="@+id/search_spin"
			style="@style/WrapHeight"
			android:layout_alignParentTop="true" />
			
		<AutoCompleteTextView android:id="@+id/query_input"
			style="@style/SearchEdit"
			android:layout_alignParentLeft="true"
			android:layout_toLeftOf="@+id/search_btn"
			android:layout_below="@+id/search_spin"
			android:hint="@string/search_hint" />
		
		<ImageButton android:id="@+id/search_btn"
			style="@style/SearchButton"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/search_spin" />
	</RelativeLayout>
	
	<LinearLayout
    	style="@style/HomeTileRow">
		
		<Button android:id="@+id/about_btn"
			style="@style/HomeTile"
			android:text="@string/about_label"
			android:drawableTop="@drawable/home_about" />
		
		<Button android:id="@+id/donate_btn"
			style="@style/HomeTile"
			android:text="@string/donate_label"
			android:drawableTop="@drawable/home_donate" />
	</LinearLayout>
	
	<View style="@style/Separator" />
	
	<RelativeLayout
		style="@style/HomeTextArea">
			
		<TextView android:id="@+id/hometext"
			style="@style/HomeText"
			android:text="@string/hometext" />	
	</RelativeLayout>
</LinearLayout>